--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>FreeCodeCamp leader board</title>
- 
+
+    <link href="style.css" type="text/css" rel="stylesheet"/>
   </head>
 
   <body>
